--- a/arxiv/2021_03_arxiv.html
+++ b/arxiv/2021_03_arxiv.html
@@ -164,7 +164,45 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.02613">https://arxiv.org/abs/2103.02613</a></span> Solitons in lattice field theories via tight-binding supersymmetry ** (Victor Galitski)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.03187">https://arxiv.org/abs/2103.03187</a></span> Towards A String Dual of SYK *** (Herman Verlinde)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.02713">https://arxiv.org/abs/2103.02713</a></span> Field Theories for type-II fractons ***** (Claudio Chamon)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.03164">https://arxiv.org/abs/2103.03164</a></span> Realizing Majorana fermion modes in the Kitaev model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.03164">https://arxiv.org/abs/2103.03164</a></span> Realizing Majorana fermion modes in the Kitaev model **</p><br>
+<p class="p1">20210308</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.03489">https://arxiv.org/abs/2103.03489</a></span> Flat band, spin-1 Dirac cone, and Hofstadter diagram in fermionic square kagome model ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.03306">https://arxiv.org/abs/2103.03306</a></span> TEMPERATURE AS PERTURBATION IN QUANTUM MECHANICS</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.03256">https://arxiv.org/abs/2103.03256</a></span> Doped Mott Insulators Break Z2 Symmetry of a Fermi Liquid: Stability of Strongly Coupled Fixed Points ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.03269">https://arxiv.org/abs/2103.03269</a></span> Topology and geometry under the nonlinear electromagnetic spotlight</p>
+<p class="p2"><br></p>
+<p class="p1">20210309</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.03895">https://arxiv.org/abs/2103.03895</a></span> Hidden dualities in 1D quasiperiodic lattice models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.03941">https://arxiv.org/abs/2103.03941</a></span> Flat and Correlated Plasmon Bands in Graphene/α-RuCl3 Heterostructures *** (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.03893">https://arxiv.org/abs/2103.03893</a></span> Symmetry-protected gates of Majorana qubits in a high-Tc superconductor platform (Meng Cheng, Yuxuan Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.04634">https://arxiv.org/abs/2103.04634</a></span> An Overview of the Compton Scattering Calculation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.04726">https://arxiv.org/abs/2103.04726</a></span> Exchange constants for local spin Hamiltonians from tight-binding models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.04967">https://arxiv.org/abs/2103.04967</a></span> Light-matter coupling and quantum geometry in moir ́e materials **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.04223">https://arxiv.org/abs/2103.04223</a></span> Phonon Hall Viscosity in Magnetic Insulators (Lucile Savary, Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.04984">https://arxiv.org/abs/2103.04984</a></span> Pair-Density-Wave in the Strong Coupling Limit of the Holstein-Hubbard model *** (Steven A. Kivelson, Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.04642">https://arxiv.org/abs/2103.04642</a></span> Concise guide for electronic topological transitions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.04509">https://arxiv.org/abs/2103.04509</a></span> Gravitational contributions to the electron g-factor *** (David B. Kaplan)</p>
+<p class="p3"><a href="https://arxiv.org/abs/1907.00645">https://arxiv.org/abs/1907.00645</a><span class="s2"> Covariant Canonical Quantization</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.04313">https://arxiv.org/abs/2103.04313</a></span> Regularization of the Poisson Bracket in Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.12274">https://arxiv.org/abs/2008.12274</a></span> Complexity growth of operators in the SYK model and in JT gravity **** (Shao-Kai Jian, Brian Swingle)</p>
+<p class="p2"></p>
+<p class="p1">20210310</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.05010">https://arxiv.org/abs/2103.05010</a></span> Higher-order topological superconductors from Weyl semimetals *** (Apoorv Tiwari,2,3 and Yuxuan Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.05141">https://arxiv.org/abs/2103.05141</a></span> Non-Hermitian band topology with generalized inversion symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.05335">https://arxiv.org/abs/2103.05335</a></span> Floquet scattering of quadratic band-touching semimetals through a time-periodic potential well (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.05303">https://arxiv.org/abs/2103.05303</a></span> Entanglement Entropy in Interacting Field Theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.05536">https://arxiv.org/abs/2103.05536</a></span> The Higgs mechanism in nonlocal field theory ***</p>
+<p class="p2"><br></p>
+<p class="p1">20210311</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.05650">https://arxiv.org/abs/2103.05650</a></span> Phonon Hall viscosity from phonon-spinon interactions *** (Subir Sachdev, Mathias S. Scheurer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.05656">https://arxiv.org/abs/2103.05656</a></span> Spin-Space Groups and Magnon Band Topology</p>
+<p class="p2"><br></p>
+<p class="p1">20210312</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.06865">https://arxiv.org/abs/2103.06865</a></span> Symmetry Indicators for Inversion-Symmetric Non-Hermitian Topological Band Structures</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.06295">https://arxiv.org/abs/2103.06295</a></span> Quenched disorder at antiferromagnetic quantum critical points in 2d metals ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.06756">https://arxiv.org/abs/2103.06756</a></span> Shear Modulus Anomaly of Unconventional Superconductor in a Symmetry Breaking Field **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.01127">https://arxiv.org/abs/1911.01127</a></span> A generalized Stueckelberg-Higgs gauge theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.06826">https://arxiv.org/abs/2103.06826</a></span> Non-topological fractional fermion number in the Jackiw-Rossi model ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
