--- a/arxiv/2021_03_arxiv.html
+++ b/arxiv/2021_03_arxiv.html
@@ -202,7 +202,53 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.06295">https://arxiv.org/abs/2103.06295</a></span> Quenched disorder at antiferromagnetic quantum critical points in 2d metals ****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.06756">https://arxiv.org/abs/2103.06756</a></span> Shear Modulus Anomaly of Unconventional Superconductor in a Symmetry Breaking Field **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.01127">https://arxiv.org/abs/1911.01127</a></span> A generalized Stueckelberg-Higgs gauge theory</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.06826">https://arxiv.org/abs/2103.06826</a></span> Non-topological fractional fermion number in the Jackiw-Rossi model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.06826">https://arxiv.org/abs/2103.06826</a></span> Non-topological fractional fermion number in the Jackiw-Rossi model ***</p><br>
+<p class="p1">20210315</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.06899">https://arxiv.org/abs/2103.06899</a></span> Hydrodynamic non-linear response of interacting integrable systems **** (S. A. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.07049">https://arxiv.org/abs/2103.07049</a></span> Topological superconducting transition driven by time-reversal-symmetry breaking *****</p>
+<p class="p2"><br></p>
+<p class="p1">20210316</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.07759">https://arxiv.org/abs/2103.07759</a></span> Path integrals for stochastic hybrid reaction-diffusion processes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.07761">https://arxiv.org/abs/2103.07761</a></span> Fixed d Renormalization Group Analysis of Conserved Surface Roughening **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.07485">https://arxiv.org/abs/2103.07485</a></span> Flow Renormalization and Emergent Prethermal Regimes of Periodically-Driven Quantum Systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08166">https://arxiv.org/abs/2103.08166</a></span> The emergence of Strange metal and Topological Liquid near Quantum Critical Point in a solvable model ***** (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08477">https://arxiv.org/abs/2103.08477</a></span> Exhaustive constructions of effective models in 1651 magnetic space groups ***** (Xiangang Wan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08486">https://arxiv.org/abs/2103.08486</a></span> Determining the range of magnetic interactions from the relations between magnon eigenvalues at high-symmetry k points ** (Xiangang Wan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08122">https://arxiv.org/abs/2103.08122</a></span> Photon echo from lensing of fractional excitations in Tomonaga-Luttinger spin liquid *** (Masaki Oshikawa, Yuan Wan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08434">https://arxiv.org/abs/2103.08434</a></span> Gross-Neveu Heisenberg criticality: dynamical generation of quantum spin Hall masses ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08489">https://arxiv.org/abs/2103.08489</a></span> Fluctuation-driven, topology-stabilized order in a correlated nodal semimetal ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08088">https://arxiv.org/abs/2103.08088</a></span> Topological crystalline superconductivity in locally noncentrosymmetric CeRh2As2 (Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.07624">https://arxiv.org/abs/2103.07624</a></span> Scrambling with conservation laws ***** (Gong Cheng, Brian Swingle)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2103.07996">https://arxiv.org/abs/2103.07996</a><span class="s2"> Quantum-Entropy Physics ***</span></p>
+<p class="p2"><br></p>
+<p class="p1">20210317</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08767">https://arxiv.org/abs/2103.08767</a></span> Activating superconductivity in a repulsive system by high-energy degrees of freedom (Leonid Levitov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08646">https://arxiv.org/abs/2103.08646</a></span> Probing topological quantum matter with scanning tunnelling microscopy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08851">https://arxiv.org/abs/2103.08851</a></span> Macroscopically degenerate localized zero-energy states of quasicrystalline bilayer systems in strong coupling limit *** (Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08927">https://arxiv.org/abs/2103.08927</a></span> Quenches in initially coupled Tomonaga-Luttinger Liquids: a conformal field theory approach ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08622">https://arxiv.org/abs/2103.08622</a></span> Symmetry protected self correcting quantum memory in three space dimensions (Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08941">https://arxiv.org/abs/2103.08941</a></span> Floquet engineering of Mott insulators with strong spin-orbit coupling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08790">https://arxiv.org/abs/2103.08790</a></span> Theory of Ca10Cr7O28 as a bilayer breathing–kagome magnet: Classical thermodynamics and semi–classical dynamics **** (Han Yan, Nic Shannon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08615">https://arxiv.org/abs/2103.08615</a></span> Large N theory of critical Fermi surfaces ***** (Ilya Esterlis, Haoyu Guo, Aavishkar A. Patel, Subir Sachdev)<br>
+<a href="https://arxiv.org/abs/2103.08607"><span class="s1">https://arxiv.org/abs/2103.08607</span></a> Planckian Metal at a Doping-Induced Quantum Critical Point ***</p>
+<p class="p2"><br></p>
+<p class="p1">20210318</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09796">https://arxiv.org/abs/2103.09796</a></span> Quantum Criticality in Twisted Transition Metal Dichalcogenides</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09255">https://arxiv.org/abs/2103.09255</a></span> Photo-induced superconducting-like response in strongly correlated systems ** (Patrick A. Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09657">https://arxiv.org/abs/2103.09657</a></span> Entanglement dualities in supersymmetry **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09618">https://arxiv.org/abs/2103.09618</a></span> Chemical sensing with graphene: A quantum field theory perspective ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09779">https://arxiv.org/abs/2103.09779</a></span> Continuous Mott transition in semiconductor moiré superlattices (Debanjan Chowdhury, Liang Fu)</p>
+<p class="p2"><br></p>
+<p class="p1">20210319</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09826">https://arxiv.org/abs/2103.09826</a></span> Volume-preserving diffeomorphism as nonabelian higher-rank gauge symmetry<span class="Apple-converted-space">  </span>***** (Dam Thanh Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09841">https://arxiv.org/abs/2103.09841</a></span> Unquantized anomalies in topological semimetals ***** (Chong Wang, A.A. Burkov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09909">https://arxiv.org/abs/2103.09909</a></span> Stochastic Processes and Statistical Mechanics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.10351">https://arxiv.org/abs/2103.10351</a></span> Comments on the Weyl-Wigner calculus for lattice models **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.10168">https://arxiv.org/abs/2103.10168</a></span> Conformal correlators in the critical O(N) vector model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09825">https://arxiv.org/abs/2103.09825</a></span> An SU(4) chiral spin liquid and quantized dipole Hall effect in moiré bilayers ***** (Ya-Hui Zhang, D. N. Sheng, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09828">https://arxiv.org/abs/2103.09828</a></span> Optical phonons coupled to a Kitaev spin liquid *** (J. Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.10048">https://arxiv.org/abs/2103.10048</a></span> CP-violating supersymmetry anomaly</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12543">https://arxiv.org/abs/2011.12543</a></span> Higher-form symmetry breaking at Ising transitions *** (Meng Cheng, Zi Yang Meng)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
