--- a/arxiv/2021_03_arxiv.html
+++ b/arxiv/2021_03_arxiv.html
@@ -248,7 +248,52 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09825">https://arxiv.org/abs/2103.09825</a></span> An SU(4) chiral spin liquid and quantized dipole Hall effect in moiré bilayers ***** (Ya-Hui Zhang, D. N. Sheng, Ashvin Vishwanath)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.09828">https://arxiv.org/abs/2103.09828</a></span> Optical phonons coupled to a Kitaev spin liquid *** (J. Knolle)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.10048">https://arxiv.org/abs/2103.10048</a></span> CP-violating supersymmetry anomaly</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12543">https://arxiv.org/abs/2011.12543</a></span> Higher-form symmetry breaking at Ising transitions *** (Meng Cheng, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12543">https://arxiv.org/abs/2011.12543</a></span> Higher-form symmetry breaking at Ising transitions *** (Meng Cheng, Zi Yang Meng)</p><br>
+<p class="p1">20210322</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.10818">https://arxiv.org/abs/2103.10818</a></span> Critical properties of the Floquet Time Crystal ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.10654">https://arxiv.org/abs/2103.10654</a></span> Atiyah-Patodi-Singer index theorem from axial anomaly *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.10680">https://arxiv.org/abs/2103.10680</a></span> SO(5) critical point in a spin-flavor Kondo device - Bosonization and refermionization solution **** (Ian Affleck)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.10817">https://arxiv.org/abs/2103.10817</a></span> Topological Route to New and Unusual Coulomb Spin Liquids ***** (Owen Benton)<br>
+<a href="https://arxiv.org/abs/2103.10445"><span class="s1">https://arxiv.org/abs/2103.10445</span></a> Probing time reversal symmetry breaking topological superconductivity in twisted double layer copper oxides with polar Kerr effect (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.11815">https://arxiv.org/abs/2103.11815</a></span> The ADM version of GR at Sixty: a brief account for historians (S. Deser)</p>
+<p class="p2"><br></p>
+<p class="p1">20210323</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12026">https://arxiv.org/abs/2103.12026</a></span> Energetics of the PH-Pfaffian state and the 5/2-fractional quantum Hall effect ** (F. D. M. Haldane)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.11019">https://arxiv.org/abs/2103.11019</a></span> Graviton Chirality and Topological Order in the Half-filled Landau Level *** (F. D. M. Haldane, Kun Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.11305">https://arxiv.org/abs/2103.11305</a></span> Square-root topological phase with time-reversal and particle-hole symmetry **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.11583">https://arxiv.org/abs/2103.11583</a></span> K ̈ahler geometry and Chern insulators – relations between topology and the quantum metric ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.11291">https://arxiv.org/abs/2103.11291</a></span> Topological nodal chains in optical lattices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.11582">https://arxiv.org/abs/2103.11582</a></span> Relations between topology and the quantum metric for Chern insulators ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12038">https://arxiv.org/abs/2103.12038</a></span> High-order expansion around BCS theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.11717">https://arxiv.org/abs/2103.11717</a></span> Symmetry-breaking effects of instantons in parton gauge theories ***** (Joseph Maciejko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.11929">https://arxiv.org/abs/2103.11929</a></span> Quantum Chaos of the Bose-Fermi Kondo model at the intermediate temperature *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12060">https://arxiv.org/abs/2103.12060</a></span> Spin-triplet superconductivity from excitonic effect in doped insulators: Theory and prediction for WTe2 ***** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1901.10175">https://arxiv.org/abs/1901.10175</a></span> Microlocal Analysis of Quantum Fields on Curved Spacetimes **</p>
+<p class="p2"><br></p>
+<p class="p1">20210324</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12107">https://arxiv.org/abs/2103.12107</a></span> Dynamical Fragile Topology in Floquet Crystals *** (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12397">https://arxiv.org/abs/2103.12397</a></span> The topological counterparts of non-Hermitian SSH models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12610">https://arxiv.org/abs/2103.12610</a></span> Unnuclear physics ** (Dam Thanh Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12083">https://arxiv.org/abs/2103.12083</a></span> Large Pauli Limit Violation and Reentrant Superconductivity in Magic-Angle Twisted Trilayer Graphene *** (Yuan Cao, Pablo Jarillo-Herrero)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12097">https://arxiv.org/abs/2103.12097</a></span> The Hubbard Model ***** (Daniel P. Arovas, Erez Berg, Steven A. Kivelson, Srinivas Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12110">https://arxiv.org/abs/2103.12110</a></span> Normal transport and excitonic condensation in an incoherent semimetal *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12630">https://arxiv.org/abs/2103.12630</a></span> s+ <span class="s2">⊕</span> s− Topological Superconductivity in Coupled Multifold Fermions *** (Changhee Lee, Taehyeok Kim, Suk Bum Chung, Hongki Min)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.04049">https://arxiv.org/abs/2101.04049</a></span> Gauge symmetry of the 3BF theory for a generic Lie 3-group **</p>
+<p class="p2"><br></p>
+<p class="p1">20210325</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12742">https://arxiv.org/abs/2103.12742</a></span> Probing many-body noise in a strongly interacting two-dimensional dipolar spin system ** (Soonwon Choi, Norman Y. Yao)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2103.13295">https://arxiv.org/abs/2103.13295</a><span class="s3"> Loop currents in quantum matter</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12916">https://arxiv.org/abs/2103.12916</a></span> Solitons: Kinks, Collisions and Breathers</p>
+<p class="p2"><br></p>
+<p class="p1">20210326</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.13772">https://arxiv.org/abs/2103.13772</a></span> Two-dimensional topological semimetals ** (Shengyuan A. Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.13654">https://arxiv.org/abs/2103.13654</a></span> Quantum phase transition and Resurgence: Lessons from 3d N = 4 SQED</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.13393">https://arxiv.org/abs/2103.13393</a></span> Quantum Many-Body Topology of Quasicrystals **** (Dominic V. Else)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.13399">https://arxiv.org/abs/2103.13399</a></span> Exactly solvable models for U(1) symmetry-enriched topological phases ***** (Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.13405">https://arxiv.org/abs/2103.13405</a></span> Theory of Dirac Spin-Orbital Liquids: monopoles, anomalies, and applications to SU(4) honeycomb models ***** (Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.13595">https://arxiv.org/abs/2103.13595</a></span> A short review of the recent progresses in the study of the cuprate superconductivity **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.13672">https://arxiv.org/abs/2103.13672</a></span> Perfect flat band and chiral-charge ordering out of strong spin-orbit interaction **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.08615">https://arxiv.org/abs/2103.08615</a></span> Large N theory of critical Fermi surfaces ***** (Ilya Esterlis, Haoyu Guo, Aavishkar A. Patel, Subir Sachdev)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
